--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "electron": "^7.1.11",
     "electron-reload": "^1.5.0",
+    "metro4": "^4.3.6",
     "sequelize": "^5.21.3",
     "sqlite3": "^4.1.1"
   }
