--- a/package.json
+++ b/package.json
@@ -4,22 +4,39 @@
   "description": "We’re going to build a wall, folks. We’re going to build a wall. We’re going to build it. Don’t worry. We’re going to build a wall. That wall will go up so fast your head will spin.",
   "main": "main.js",
   "scripts": {
-    "test": "mocha",
     "start": "electron .",
-    "rebuild": "electron-rebuild -f -w sqlite3"
+    "pack": "electron-builder --dir",
+    "rebuild": "electron-rebuild -f -w sqlite3",
+    "dist": "electron-builder",
+    "postinstall": "electron-builder install-app-deps"
   },
-  "author": "CatalanCabbage",
+  "build": {
+    "appId": "cataxcab.thewall",
+    "productName": "The Wall",
+    "win": {
+      "target": "nsis"
+    }
+  },
+  "nsis": {
+    "oneclick": "true",
+    "installerIcon": "build/icon.ico",
+    "installerHeaderIcon": "build/icon.ico"
+  },
+  "author": {
+    "name": "CatalanCabbage",
+    "email": "catalancabbage@zoho.com"
+  },
   "license": "ISC",
   "devDependencies": {
+    "electron": "^7.1.11",
+    "electron-builder": "^22.6.0",
     "electron-rebuild": "^1.10.0",
     "mocha": "^7.0.1"
   },
   "dependencies": {
-    "electron": "^7.1.11",
     "electron-reload": "^1.5.0",
     "fomantic-ui": "^2.8.4",
     "jquery": "^3.3.1",
-    "metro4": "^4.3.6",
     "sequelize": "^5.21.3",
     "sqlite3": "^4.1.1"
   }
