--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "thewall",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "We’re going to build a wall, folks. We’re going to build a wall. We’re going to build it. Don’t worry. We’re going to build a wall. That wall will go up so fast your head will spin.",
   "main": "main.js",
   "scripts": {
@@ -30,15 +30,14 @@
   "devDependencies": {
     "electron": "^7.1.11",
     "electron-builder": "^22.6.0",
-    "electron-rebuild": "^1.10.0",
-    "electron-updater": "^4.3.1",
-    "mocha": "^7.0.1"
+    "electron-rebuild": "^1.10.0"
   },
   "dependencies": {
     "electron-reload": "^1.5.0",
     "fomantic-ui": "^2.8.4",
     "jquery": "^3.3.1",
     "sequelize": "^5.21.3",
-    "sqlite3": "^4.1.1"
+    "sqlite3": "^4.1.1",
+    "electron-updater": "^4.3.1"
   }
 }
