--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,4 +12,5 @@ build:
       - $CI_PROJECT_DIR/dist/*.*
   script:
     - sed "s/0.0.0/${VERSION_ID}/g" package.json > _package.json && mv _package.json package.json
+    - npm install gulp
     - npm install && npm run build
