--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,4 +15,8 @@ build:
     - npm install gulp
     - rm -rf node_modules/gulp-autoprefixer
     - npm install gulp-autoprefixer@2.3.1
+    - npm install --save fomantic-ui
+    - cd semantic/
+    - npx gulp build
+    - cd ..
     - npm install && npm run build
