--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,12 +12,7 @@ build:
       - $CI_PROJECT_DIR/dist/*.*
   script:
     - sed "s/0.0.0/${VERSION_ID}/g" package.json > _package.json && mv _package.json package.json
-    - npm install gulp
-    - npm install --save fomantic-ui
     - npm install
     - rm -rf node_modules/gulp-autoprefixer
     - npm install gulp-autoprefixer@2.3.1
-    - cd semantic/
-    - npx gulp build
-    - cd ..
-    - npm run build
+    - npm build
