CI: gulp install not required since Fomantic-UI was uninstalled

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,5 @@ build:
       - $CI_PROJECT_DIR/dist/*.*
   script:
     - sed "s/0.0.0/${VERSION_ID}/g" package.json > _package.json && mv _package.json package.json
-    - rm -rf node_modules/gulp-autoprefixer
-    - npm install gulp-autoprefixer@2.3.1
     - npm install
-    - npm build
+    - npm run build
