Changed image; CI runs on Linux, but we're trying to make a Windows build. [reference](https://www.electron.build/multi-platform-build#to-build-app-for-windows-on-linux)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ stages:
   - build
   
 build:
-  image: electronjs/build
+  image: electronuserland/builder:wine
   stage: build
   artifacts:
     paths:
