Added token and update-artifact request URL

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "publish": [
       {
         "provider": "generic",
-        "url": "https://gitlab.com/cataxcab/the-wall"
+        "url": "https://gitlab.com"
       }
     ],
     "win": {
