Test toast to indicate update success

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "thewall",
   "version": "0.1.3",
-  "description": "We’re going to build a wall, folks. We’re going to build a wall. We’re going to build it. Don’t worry. We’re going to build a wall. That wall will go up so fast your head will spin.",
+  "description": "We’re going to build a wall, folks. We’re going to build a wall. Don’t worry. That wall will go up so fast your head will spin.",
   "main": "main.js",
   "repository": {
     "type": "git",
