--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "thewall",
-  "version": "0.1.4",
+  "version": "0.1.3",
   "description": "We’re going to build a wall, folks. We’re going to build a wall. Don’t worry. That wall will go up so fast your head will spin.",
   "main": "main.js",
   "repository": {
@@ -34,8 +34,8 @@
   },
   "nsis": {
     "oneclick": "true",
-    "installerIcon": "icon.png",
-    "installerHeaderIcon": "icon.png"
+    "installerIcon": "buildResources/icon.png",
+    "installerHeaderIcon": "buildResources/icon.png"
   },
   "author": {
     "name": "CatalanCabbage",
