Changed app name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "thewall",
+  "name": "the-wall",
   "version": "0.1.7",
   "description": "We’re going to build a wall, folks. We’re going to build a wall. Don’t worry. That wall will go up so fast your head will spin.",
   "main": "main.js",
