--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,18 +1,30 @@
-variables:
-  VERSION_ID: '0.1.$CI_PIPELINE_ID'
-
-stages:
-  - build
-  
-build:
+.buildTemplate:
+  variables:
+    CI_DEBUG_TRACE: "false"
   image: electronuserland/builder:wine
-  stage: build
   artifacts:
+    expire_in: 30 days
     paths:
       - $CI_PROJECT_DIR/dist/*.*
-  script:
-    - sed "s/0.0.0/${VERSION_ID}/g" package.json > _package.json && mv _package.json package.json
+  before_script:
     - npm install
-    - npm run buildWin
-    - npm cache --force clean
-    - npm run buildMac
+    
+# Build for all commits, shorter expiry
+# Used by App during testing period, till v1.0 release
+build:
+  extends: .buildTemplate
+  script:
+    - npm run buildWin && npm cache --force clean && npm run buildMac
+    - echo 'Built for commit ' $CI_COMMIT_MESSAGE
+
+# Build for Tags only, expiry extended
+# Should change feedURL for AutoUpdater to this Job after v1.0 release
+releaseBuild:
+  extends: .buildTemplate
+  only:
+    - tags
+  artifacts:
+    expire_in: 3 years
+  script:
+    - npm run buildWin && npm cache --force clean && npm run buildMac
+    - echo 'Built for Windows and Mac; tag ' $CI_COMMIT_TAG
