--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,7 @@
 # Build for all platforms
 build:
-  image: electronuserland/builder:wine
+  image: 
+    - electronuserland/builder:wine
   artifacts:
     expire_in: 30 days
     paths:
