--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@
     CI_DEBUG_TRACE: "false"
   image: electronuserland/builder:wine
   artifacts:
-    expire_in: 30 days
+    expire_in: 3 days
     paths:
       - $CI_PROJECT_DIR/dist/*.*
   before_script:
@@ -15,6 +15,7 @@
 build:
   extends: .buildTemplate
   script:
+    - npm i -g eslint && npm run lint
     - npm run buildWin && npm cache --force clean && npm run buildMac
     - echo 'Built for Windows and Mac tar.gz; commit ' $CI_COMMIT_MESSAGE
   except:
@@ -30,5 +31,6 @@ releaseBuild:
   artifacts:
     expire_in: 3 years
   script:
+    - npm i -g eslint && npm run lint
     - npm run build
     - echo 'Built for all platforms; tag ' $CI_COMMIT_TAG
