--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -15,9 +15,7 @@ rules:
     - error
     - 4
     - SwitchCase: 1
-  linebreak-style:
-    - error
-    - windows
+  linebreak-style: 0
   quotes:
     - error
     - single
